--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -359,7 +359,7 @@
        </widget>
       </item>
       <item row="1" column="2">
-       <widget class="QPushButton" name="pushButton_yx">
+       <widget class="QPushButton" name="pushButton_caret">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
           <horstretch>0</horstretch>
