--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,13 +17,13 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Calculator</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="minimumSize">
     <size>
      <width>300</width>
-     <height>300</height>
+     <height>350</height>
     </size>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
